# faiss-java

./: .gitignore  Makefile  README.md  pom.xml
.github/workflows/: build.yml
jni/: CMakeLists.txt  Makefile  swigfaiss.swig  swigjava.i
src/main/java/com/vectorsearch/faiss/utils/: JFaissConstants.java  JFaissInitializer.java  NativeUtils2.java
src/test/java/com/vectorsearch/faiss/: FaissTestCase.java  FaissTestRunner.java  OneFlat.java  ThreeIVFPQ.java  TwoIVFFlat.java
